# sentiment-api

./: .gitignore  Dockerfile  pyproject.toml
app/: constants.py  main.py  model.py  sentiment.py
